[gd_scene load_steps=19 format=3 uid="uid://bjpxedqt24ehp"]

[ext_resource type="Script" path="res://scripts/npc_alien.gd" id="1_rigvh"]
[ext_resource type="Texture2D" uid="uid://5nxdc4q541wh" path="res://art/character assets/chomp_idle.png" id="2_m0ktj"]
[ext_resource type="PackedScene" uid="uid://ddwh64sobwtg8" path="res://dialogue/chatbox.tscn" id="3_cmlje"]
[ext_resource type="Texture2D" uid="uid://b3x2113801wis" path="res://art/keybord and controller icons/individual sprites/keyboard/C button.png" id="4_avpxl"]
[ext_resource type="Texture2D" uid="uid://cha0e8mdeni4a" path="res://art/keybord and controller icons/individual sprites/keyboard/= equal.png" id="5_lpbnq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aoa0w"]
size = Vector2(17, 11)

[sub_resource type="Animation" id="Animation_qo2la"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_v4bha"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 2]
}

[sub_resource type="Animation" id="Animation_qll3m"]
resource_name = "sleep"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_hkvot"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.599144),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nmcrp"]
_data = {
"RESET": SubResource("Animation_qo2la"),
"idle": SubResource("Animation_v4bha"),
"sleep": SubResource("Animation_qll3m"),
"walk": SubResource("Animation_hkvot")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3b6yn"]
animation = &"idle"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_miuwl"]
blend_point_0/node = SubResource("AnimationNodeAnimation_3b6yn")
blend_point_0/pos = 0.0
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j7iyq"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_axu6e"]
states/Idle/node = SubResource("AnimationNodeBlendSpace1D_miuwl")
states/Idle/position = Vector2(392, 93)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_j7iyq")]

[sub_resource type="CircleShape2D" id="CircleShape2D_t6ref"]
radius = 50.0

[sub_resource type="Gradient" id="Gradient_kt3kk"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qp28g"]
gradient = SubResource("Gradient_kt3kk")
fill = 1
fill_from = Vector2(0.512821, 0.508547)
fill_to = Vector2(0.880342, 0.115385)

[node name="npc_alien" type="CharacterBody2D"]
script = ExtResource("1_rigvh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_m0ktj")
hframes = 4
vframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 9.5)
shape = SubResource("RectangleShape2D_aoa0w")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nmcrp")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_axu6e")
anim_player = NodePath("../AnimationPlayer")
parameters/Idle/blend_position = -0.00162601

[node name="Timer" type="Timer" parent="."]

[node name="chat_detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="chat_detection"]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_t6ref")

[node name="Chatbox" parent="." instance=ExtResource("3_cmlje")]
metadata/_edit_use_anchors_ = true

[node name="c_key" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -14)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_avpxl")

[node name="equal_key" type="Sprite2D" parent="."]
visible = false
position = Vector2(50, -15)
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_lpbnq")

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 0.3
texture = SubResource("GradientTexture2D_qp28g")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="chat_detection" to="." method="_on_chat_detection_body_entered"]
[connection signal="body_exited" from="chat_detection" to="." method="_on_chat_detection_body_exited"]
[connection signal="dialogue_finished" from="Chatbox" to="." method="_on_chatbox_dialogue_finished"]
[connection signal="quest_completed" from="Chatbox" to="." method="_on_chatbox_quest_completed"]
